# Boids-Praktika

./: .gitignore  Boids  CMakeLists.txt  Graphs.py  InputFile.txt  Makefile  README.md  car.cpp  car.h  creature.cpp  creature.h  data.cpp  data.h  fieldb.cpp  fieldb.h  input.cpp  input.h  inputbird.txt  inputcar.txt  main.cpp  model.cpp  model.h  output.cpp  output.h  pigeon.cpp  pigeon.h
include/: ALL.h  BASIC.h  car.h  coord.h  creature.h  data.h  fieldb.h  food.h  input.h  model.h  obstacle.h  output.h  pigeon.h
src/: Food.cpp  main.cpp  model.cpp  obstacle.cpp  output.cpp
src/include/: car.h  creature.h  data.h  input.h  model.h  output.h
